--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="donot_have_account">Don\'t have an account?</string>
     <string name="emailtocheckp">Maxmobi@37</string>
-    <string name="app_heading">File Sharing</string>
+    <string name="app_heading">Course Managment System</string>
     <string name="user_login">User Login</string>
     <string name="enter_your_emailId">Enter your email</string>
     <string name="enter_your_password">Enter your password</string>
